# jeopardy-api

./: Cargo.toml  Procfile  README.md
src/: main.rs
src/constants/: constants.rs
src/data/: categories.json  category_details.json  data.rs  mod.rs
