[package]
name = "jeopardy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
rand = "0.8.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.114"
rocket_cors = "0.6.0"
log = "0.4"
env_logger = "0.11.3"

[dependencies.rocket_contrib]
features = ["json"]